fix card layout, remove scrollbar on mobile categories

--- a/city-furshet.ru/css/menu/menu-cards.css
+++ b/city-furshet.ru/css/menu/menu-cards.css
@@ -1,11 +1,16 @@
 .card {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: space-between;
   row-gap: 10px;
   min-width: 46%;
   max-width: 46%;
+}
+
+.card-info {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
 }
 
 @media (min-width: 500px) {
@@ -13,7 +18,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
     row-gap: 10px;
     min-width: 200px;
     max-width: 200px;
